[project]
name = "muon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flab",
    "headroom-ai[all]>=0.22.0",
    "ipykernel>=7.2.0",
    "jax[cuda13]>=0.9.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
flab = { git = "https://github.com/the-feature-lab/flab" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
